Fix nav links z-index on detail page

--- a/app/modules/components/detail/header/detail-header.scss
+++ b/app/modules/components/detail/header/detail-header.scss
@@ -8,7 +8,7 @@
     position: absolute;
     right: 1rem;
     top: 1rem;
-    z-index: 9999;
+    z-index: 99;
     a {
         display: inline-block;
     }
